--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+google_analytics: UA-112074562-1
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
