--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: firstname.lastname(with ue)@epfl.ch
 address: EPFL BC324
 phone: "+41 (0)21 693 67 92"
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal website
+  Frederike Dümbgen's personal website
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://duembgen.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -30,10 +30,14 @@ linkedin_username:  duembgen
 # Build settings
 markdown: kramdown
 #theme: minima
-plugins:
+plugins_dir:
   - jekyll-feed
 
 google_analytics: UA-112074562-1
+
+collections: 
+  publications:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
