--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ collections:
     output: true
   research:
     output: true
+  projects:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
